[package]
name = "rayday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = { version = "=0.4.19", features = ["serde"] }
clip = "0.1.1"
config = "0.13.1"
crossterm = "0.23.2"
dirs = "4.0.0"
pickledb = "0.5.1"
serde = "1.0.136"
serde_derive = "1.0.136"
unicode-width = "0.1.9"
num-traits = "0.2.15"
centered_interval_tree = { git = "https://www.github.com/wooker/centered_interval_tree", branch = "main" }

[dependencies.confy]
version = "0.5.1"
features = ["yaml_conf"]
default-features = false

[dependencies.tui]
version = "0.18.0"
features = ["serde"]

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
